public/css/burger_style.css
/* CORE ROOT, DOM, AND GENERAL UTILITY CSS */

:root {
    --primary: #F3F3F3;
    --secondary: #A50104;
    --tertiary: #250001;
    --highlight: #ffee02;
    --highlight2: #ff9900;
    --fontStandardColor: #FCBA04;
    --headerFont: 'Nova Round', cursive;
    --standardFontFamily: 'Varela Round', sans-serif;
}

body {
    background-color: var(--tertiary);
    color: var(--fontStandardColor);
    font-size: 3vw;
    text-align: center;
    font-family: var(--standardFontFamily);
}

h1, h2, h3, h4, h5, h6, p, ul {
    margin: 0;
    padding: 0;
}

h1, h2, h3, h4, h5, h6 {
    background-color: var(--secondary);
    font-family: var(--headerFont);
    color: var(--fontStandardColor);
}

ul {
    list-style: none;
}

p {
    background-color: var(--primary);
    color: var(--tertiary);
}

a, button {
    cursor: pointer;
}

a:link {
    color: var(--highlight);
}

a:visited {
    color: var(--highlight2);
}

a:active {
    color: var(--highlight2);
}

/* 
-------------------------
Background and Body CSS
------------------------- 
*/

.newBody {
    display: grid;
    width: 96vw;
    grid-gap: 10px;
    grid-template-columns: auto repeat(4, 1fr) auto;
    grid-template-areas:
        "home   title   title   title   title   exit"
        "main  main    main    main    main    main"
}

/* 
-------------------------
Header CSS
------------------------- 
*/

.homeCorner {
    grid-area: home;
    margin-top: 2%;
    padding-top: 20px;
    padding-left: 5vw;
    padding-right: 2vw;
    text-align: left !important;
    font-size: 5vw;
}

.exitCorner {
    grid-area: exit;
    margin-top: 2%;
    padding-top: 20px;
    padding-right: 5vw;
    padding-left: 2vw;
    text-align: right !important;
    font-size: 5vw;
    /* transform: rotate(180deg); */
}

.fa-sign-out-alt {
    color: var(--tertiary)
}

.fas:hover {
    cursor: pointer !important;
    border-radius: 50%;
    background-color: var(--secondary);
    -webkit-box-shadow: 0px 0px 8px 8px var(--secondary);
    -moz-box-shadow: 0px 0px 8px 8px var(--secondary);
    box-shadow: 0px 0px 8px 8px var(--secondary);
}

/* -------------- */

.titleDiv {
    grid-area: title;
    text-align: center;
    padding: 2%;
    margin: 2%;
    background-color: var(--secondary);
    outline: 3px solid #FCBA04;
    outline-offset: -8px;

}

.titleBurgerMuncher {

}

.burgerMunchertagLine {
    margin-top: 2%;
    color: var(--primary)
}

/* 
-------------------------
Global Content CSS
------------------------- 
*/

.mainContent {
    grid-area: main;
    padding: 8px;
    padding-top: 0px;
    display: grid;
    justify-content: center
    grid-gap: 10px;
    grid-template: auto / 1fr;
    grid-template-areas:
        "toMunch"
        "muncher"
        "munched"
        "addBurger"
}

/* -------------- */

.toMunch {
    grid-area: toMunch;
}

/* -------------- */

.muncherDiv {
    grid-area: muncher;
    margin: 5px;
    margin-left: auto;
    margin-right: auto;
    width: 100px;
    display: grid;
    justify-content: center;
    align-content: center;
}

.muncher {
    background-attachment: fixed;
    background-color: var(--tertiary);
    border: 3px solid var(--highlight);
    border-radius: 50%;
    padding: 5%;
    width: 90%;
}

/* -------------- */

.munched {
    grid-area: munched;
    margin: 5px;
}

/* -------------- */

.addBurger {
    grid-area: addBurger;
    background-color: var(--fontStandardColor);
    color: var(--tertiary);
    border: 5px solid var(--secondary);
    display: grid;
    grid-gap: 10px;
    grid-template-columns: 1fr;
}

.create-form {
    display: grid;
    grid-gap: 10px;
    grid-template-columns: 1fr;
    justify-content: center;
    grid-template-areas:
        "burgName"
        "brgrBtn";
    margin-bottom: 10px;
}

.form-group {
    grid-area: burgName;
    font-size: 1.5rem;
    font-weight: bold;
}

.submitBurg {
    grid-area: brgrBtn;
    font-size: 1.5rem;
    margin-right: auto;
    margin-left: auto;
}

.munchTitle {
    margin-bottom: 10px;
}


/* 
-------------------------
Burger Divs CSS
------------------------- 
*/

.burgerDiv {
    margin-bottom: 10px;
    padding: 2%;
    display: grid;
    grid-gap: 5px;
    grid-template-columns: repeat(2, 1fr);
    grid-template-areas:
        "burger     burger"
        "eatBurger  throwBurger";
    border: 2px solid var(--highlight);
}

.burgerName {
    grid-area: burger;
}

.change-munched {
    grid-area: eatBurger;
}

.delete-burger {
    grid-area: throwBurger;
}

.brgrBtn {
    background-color: var(--tertiary);
    border: solid 2px var(--secondary);
    border-radius: 25px;
    color: var(--primary);
    text-shadow: -1px -1px 1px var(--secondary), 1px 1px 1px var(--secondary);
}


@media screen and (min-width: 600px) {

    .mainContent {
        padding: 20px;
        padding-top: 0px;
        grid-template-columns: 1fr auto 1fr;
        grid-template-areas:
            "toMunch   muncher   munched"
            "addBurger  addBurger   addBurger"
    }

    .create-form {
        grid-template-columns: 1fr auto;
        grid-template-areas:
            "burgName   brgrBtn";
    }

    .submitBurg {
        margin-right: 30%;
    }

    .muncherDiv {
        width: 150px;
        padding-top: 50px;
    }

    body {
        font-size: 2.5vw;
    }

}

@media screen and (min-width: 900px) {

    body {
        font-size: 1.8vw;
    }

    .homeCorner {
        font-size: 4vw;
        padding-left: 2vw;
        padding-right: .2vw;
    }

    .exitCorner {
        padding-left: .1vw;
        padding-right: 1vw;
    }

    .newBody {
        grid-template-areas:
            "home   title   title   title   title   exit"
            ".  main    main    main    main    ."
    }

    .muncherDiv {
        width: 200px;
        padding-top: 0;
        align-content: center;
    }

    .submitBurg {
        margin-right: 40%;
    }

}

@media screen and (min-width: 1200px) {

    body {
        font-size: 1.5vw;
    }

    .muncherDiv {
        width: 220px;
    }

}


@media screen and (min-width: 1800px) {

    .muncherDiv {
        width: 300px;
    }

}

